--- a/css/style.css
+++ b/css/style.css
@@ -100,13 +100,16 @@ canvas{
   background-repeat: no-repeat;
 }
 .monument{
-  width:280px;
-  height: 200px;
-  background-color: red;
+  width: 50vh;
+  height: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: 10% !important;
+  vertical-align: center;
 }
 .content{
-  width:280px;
-  height: 200px;
+  width:100vh;
+  height: 500px;
   background-color: blue;
 }
 .tab{
@@ -201,7 +204,7 @@ a:hover{
     padding: 10px 0;
     font-size: 22px;
 }
-#menuToggle input:checked ~ ul{
+#menuToggle input:checked ~ div{
     transform: scale(1.0, 1.0);
     opacity: 1;
 }
