--- a/css/style.css
+++ b/css/style.css
@@ -209,9 +209,8 @@ a:hover{
 }
 
 .content{
-  width:60vw;
+  width:80vh;
   height: 500px;
-  border:solid blue 1px;
   display: flex;
   flex-direction: column;
   padding :20px 30px !important;
@@ -233,6 +232,46 @@ a:hover{
 
 }
 
+.fancy-button{
+  padding:10px;
+  border-radius: 7px;
+  color:white;
+  margin:7px;
+  background-color:grey
+}
+
+#team {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#team .title {
+    text-transform: lowercase;
+    margin: 5px 0;
+    font-weight: 100;
+    font-size: 0.8rem;
+}
+
+#team .name {
+    text-transform: uppercase;
+    margin: 5px 0;
+     font-size: 0.8rem;
+}
+
+#vicechair {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+#committee {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+}
+
 /*---- Contact us page ----*/
 
 @media only screen and (max-width: 425px) {
@@ -240,4 +279,7 @@ a:hover{
       top:20px;
       left: 20px;
     }
+    #team .title, .name {
+    font-size: 0.8rem;
+  }
 }
