--- a/css/style.css
+++ b/css/style.css
@@ -235,9 +235,17 @@ a:hover{
 .fancy-button{
   padding:10px;
   border-radius: 7px;
-  color:white;
   margin:7px;
-  background-color:grey
+  background-color:white;
+  cursor: pointer;
+}
+
+.fancy-button:hover {
+  -ms-transform: translateY(-10px); /* IE 9 */
+  -webkit-transform: translateY(-10px); /* Safari */
+  transform: translateY(-10px);
+  box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+  transition-duration: 0.7s;
 }
 
 #team {
