--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,8 @@ a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
+    flex-shrink: 0.3;
 }
 
 #team .title {
@@ -270,8 +272,9 @@ a:hover{
 #vicechair {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 #committee {
