--- a/css/style.css
+++ b/css/style.css
@@ -252,8 +252,6 @@ a:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-wrap: wrap;
-    flex-shrink: 0.3;
 }
 
 #team .title {
@@ -272,9 +270,8 @@ a:hover{
 #vicechair {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
-    overflow: hidden;
 }
 
 #committee {
