--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@ body {
 	background-size: cover;
 	background-position: center;
 	font-family: Montserrat !important;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: antialiased;
 }
 
 #udaanlogo {
@@ -27,14 +30,14 @@ body {
 }
 }
 @media only screen and (max-width: 768px) {
-    #logo {
+    #udaanlogo {
 		top:15%;
     left:35%;
 		width:40%;
     }
 }
 @media only screen and (max-width: 425px) {
-    #logo {
+    #udaanlogo {
         left:20%;
 		width:60%;
     }
@@ -96,7 +99,7 @@ canvas{
   width: 100%;
   height: 100%;
   background-color: #fff;
-  background-image: url('../public/images/background.png');
+  background-image: url('../images/background.png');
   background-size: 70%;
   background-position: 50% 100%;
   background-repeat: no-repeat;
@@ -209,8 +212,8 @@ a:hover{
 }
 
 .content{
-  width:80vh;
-  height: 500px;
+  width:50vw;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   padding :20px 30px !important;
@@ -225,8 +228,8 @@ a:hover{
 }
 
 .event-poster{
-    height: 100px;
-    width: 150px;  
+    height: 20vh;
+    width: 200px;  
     background-color: orange;
     margin:0px !important;
 
@@ -280,9 +283,41 @@ a:hover{
     justify-content:center;
 }
 
+#black-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    z-index: 40;
+    display: none;
+}
+
+
 /*---- Contact us page ----*/
+@media only screen and (max-width: 768px) {
+    
+    .text-align {
+        text-align: center;
+    }
+    .section-divide {
+        flex-wrap: wrap;
+    }
+    .content{
+       width:50vw;
+    }
+}
 
 @media only screen and (max-width: 425px) {
+  .monument{
+    display: none;
+  }
+  .content{
+    width: 100%;
+    padding: 0px 10px !important;
+    height: auto;
+}
     #menuToggle{
       top:20px;
       left: 20px;
@@ -290,4 +325,8 @@ a:hover{
     #team .title, .name {
     font-size: 0.8rem;
   }
+  #particles-js{
+  background-size: 100%;
+  background-position: 50% 90%;
+}
 }
